[FIX] Fix hero height on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,7 +26,6 @@ a {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
 }
 
 .hero_image {
